# cloud-operations-reasoning-agent

./: .gitignore  AGENTS.md  Dockerfile  ISSUES.md  README.md  config.sample.yaml  docker-compose.yml  main.py  opencode.json  pyproject.toml  requirements.txt  session-ses_36fd.md  tui_agent.py  vercel.json
.github/workflows/: publish.yml
.opencode/skills/textual/: SKILL.md
client/: Dockerfile  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
client/app/: globals.css  layout.tsx  page.tsx  providers.tsx
client/app/chat/: layout.tsx  page.tsx
client/app/login/: page.tsx
client/components/: ChainOfThought.tsx  ChatInput.tsx  ChatSessionView.tsx  CodeBlock.tsx  CollapsibleField.tsx  DevSettingsButton.tsx  FeatureFlagsModal.tsx  LiveThinking.tsx  MarkdownRenderer.tsx  Navbar.tsx  ReasoningHistory.tsx
client/lib/: SessionContext.tsx  api.ts  config.ts  types.ts  useChatStream.ts
clients/cli/: app.py
clients/tui/: __init__.py  app.py  session_picker.py  step_widget.py  styles.tcss
clients/tui/components/: __init__.py  chat_history.py
clients/tui/modals/: __init__.py  configure_modal.py  configure_modal.tcss  session_picker.py  session_picker.tcss  theme_picker.py  theme_picker.tcss
clients/tui/screens/: __init__.py  chat_screen.py  (+1 more)
clients/web_ui/: __init__.py  app.py
docs/: api.md  custom-modal-executor.md  frontend-design-system.md  landing-page.md  poc-infrastructure.md  publishing.md
iac/cdk/: README.md  cdk.json  package-lock.json  package.json  tsconfig.json
iac/cloudformation/: README.md  docker-compose.yml  poc-template-packaged.yaml  poc-template.yaml  ubuntu-user-data.sh  user-data.sh
references/: EXAMPLE_ASYNC_SMOLAGENTS.md  HOWMULTI_STEP_AGENTS_WORK.md  MANAGE_MEMORY.md  SMOLAGENTS_AGENTS.md  SMOLAGENTS_MEMORY.md  VERCEL_API_GATEWAY.md
scripts/: build-and-push.sh  build.sh  deploy-ec2.sh  deploy.sh
src/: app.py  config.py  themes.py
src/agents/: __init__.py  aws_agent.py  factory.py  prompts.yaml
src/fastapi/: app.py
src/models/: __init__.py  openrouter_model.py
src/session/: __init__.py  database.py  manager.py  models.py
src/storage/: __init__.py  supabase_storage.py
src/tools/: __init__.py  aws_tools.py
src/utils/: dummy_response.py  logging.py  serializers.py
tests/: test_agents.py  test_aws_tools.py  test_config.py  test_models.py
(+92 files in other folders)
