[project]
name = "smolagents-trial-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.52",
    "fastapi>=0.104.0",
    "gradio>=4.0.0",
    "langfuse>=3.14.4",
    "openinference-instrumentation-smolagents>=0.1.22",
    "smolagents[telemetry]>=1.24.0",
    "textual>=8.0.0",
    "typer>=0.24.0",
    "uvicorn>=0.24.0",
    "pyfiglet>=1.0.0",
]

[dependency-groups]
dev = [
    "baml-py>=0.219.0",
]
