[project]
name = "cora"
version = "0.1.0"
description = "CORA stands for Cloud Operations Reasoning Agent. Cora helps developers and architects query their AWS architecture for resources and reason about the resource configurations."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Siddharth Chillale" }
]
dependencies = [
    "python-dotenv",
    "fastapi>=0.104.0",
    "pyyaml>=6.0.0",
    "smolagents[modal, openai]>=1.24.0",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.17",
    "sse-starlette>=2.2.1",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.3",
]

# [project.optional-dependencies]
# local_executor = [
#     "boto3>=1.42.52"
# ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true

[project.scripts]
cora = "main:main"
cora-web = "src.app:main"
app = "src.app:app"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]
